# WhatsappChatAnalysis

./: .gitignore  LICENSE  NOTICE  README.md  main.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
notebook/: research.ipynb
src/: app.py  chat_award.py  full_stopword.txt  ghost_mode.py  helper.py  late_night.py  main.py  preprocessing.py  roast_mode.py  stopwords_list.txt  styles.py
src/css/: base.css  fix_file_uploader.css
src/features/: chat_streak.py  ghost_mode.py  helper.py  late_night.py  reply_network.py  reply_speed.py
src/pages/: awards.py  emoji_analysis.py  ghosting.py  network.py  overview.py  response_time.py  roast.py  sleep.py  streaks.py  timelines.py  vocabulary.py
